--- a/10-kobe/index.qmd
+++ b/10-kobe/index.qmd
@@ -1,13 +1,13 @@
 ---
-title: <span style="color:white">The Evolution of LeBron's Shot Choices (2003–2024)</span>
-subtitle: "How the King’s shot selection mirrors the NBA’s transformation"
+title: <span style="color:white">Mamba Mentality</span>
+subtitle: "How Kobe Bryant’s pursuit of perfection became a blueprint for greatness"
 
 author: 
 - name: "King Matayo"
   email: kingmatayo.thefirst@gmail.com
-date: 12/07/2024
+date: 12/19/2024
 
-title-block-banner: ./assets/lebron-collage.jpg
+title-block-banner: ./assets/kobe.jpg
 title-block-banner-color: "black"
 
 format: html
@@ -42,201 +42,76 @@ library(viridis)
 # Source functions
 source(file="./R/00-functions.R")
 
-# Read csv file with all NBA shots data from 2003 to 2024
-all_shots <- read.csv("./data/allshots-2003-2024.csv")
 
 ```
 
-# A rookie’s first shot
+# The Relentless Path to Mastery
 
-In my experience, the simplest decisions often reveal the most about who we are, at any given point in time.
+Kobe Bryant wasn’t chasing trophies. Trophies, to him, were byproducts. What he was chasing was something much harder to define: mastery. Mastery of his craft, his mind, his body, his potential.
 
-On October 29, 2003, 18-year-old LeBron James made his first shot decision as an NBA player. It wasn’t a flashy dunk or a deep three. It was a mid-range jumper - plain, efficient, unremarkable. Two points.
+Mastery, it turns out, isn’t a destination. It’s a road with no end. You get closer to it, but you never quite arrive. And maybe that’s the point.
 
-::: column-margin
-[LeBron's 1st NBA Game: October 29, 2003](https://youtu.be/JLjH0rrNFeU?si=R5YavOwTrWUNfcZ2){target="_blank"}
-:::
+When Kobe was 12 years old, he played in a summer basketball league and didn’t score a single point the entire season. Not one. Most kids would have quit, but Kobe wasn’t most kids. He spent the next summer shooting 1,000 shots a day. When the league returned the following year, he dominated.
 
-But that single shot spoke volumes. It told us what basketball was in 2003: a game that valued size and strength, rewarded mid-range specialists, and treated the three-point line as an occasional luxury.
+That wasn’t just a childhood story; it was the story of his life. Kobe wasn’t interested in what he couldn’t do—he was consumed by how to close the gap between where he was and where he wanted to be. The gap became his obsession.
 
-Fast forward 20 years, and that same decision would look out of place. Today’s NBA is unrecognizable. Three-pointers aren’t just common - they’re necessary. Mid-range shots are now basketball’s version of a landline phone: technically still around, but rarely used.
+# Work Ethic Isn’t Glamorous
 
-::: column-margin
-[LeBron, 20 years later: October 29, 2023](https://youtu.be/7-q0NDE-_bw?si=mcOFaFomUdgVMu6w){target="_blank"}
-:::
+Kobe’s “Mamba Mentality” wasn’t just about working hard—it was about working smart. His 4:00 a.m. workouts weren’t for show. They were a calculated way to add hours of practice over a lifetime. He once explained, “If I start my day earlier, I can get more done. Over the years, that adds up.”
 
-LeBron’s first shot wasn’t just the start of his career. It was a snapshot of a moment in time. And what’s fascinating is how his evolution mirrors the evolution of the league itself. His choices on the court became a masterclass in adaptation.
+But work ethic, for all its romanticism, is ugly in real life. It’s lonely gym sessions. It’s missing social events. It’s endless drills for a single moment in a game. Kobe didn’t just embrace this—he thrived in it.
 
-This is the story of how LeBron’s shot selection changed over two decades, and how those choices reflect the shifting forces that reshaped the game of basketball.
+The results? By his third season in the NBA, Kobe was already an All-Star. And he never stopped improving.
 
-::: {.panel-tabset .nav-pills}
-## LeBron's first NBA game chart
+*\[Placeholder: Chart or story showing year-by-year improvements in Kobe’s efficiency, shooting mechanics, or defensive capabilities.\]*
 
-```{r warning=FALSE, message=FALSE}
-# Creating a basic shot chart for Lebron's 1st NBA shot
+# Reinvention Is Survival
 
-create_shotchart(all_shots,"LeBron James",20031029)
-```
+In his early years, Kobe’s game was built on explosive athleticism. He’d drive to the basket with ferocity, dunk over defenders, and smother opponents with relentless defense. But Father Time is undefeated. By his late 20s, Kobe began to pivot.
 
-## 20 years later
+He replaced raw athleticism with calculated precision. He borrowed footwork from soccer players and studied the post moves of Hakeem Olajuwon. By the end of his career, his game was a masterclass in efficiency.
 
-```{r warning=FALSE, message=FALSE}
-create_shotchart(all_shots,"LeBron James",20231029)
-```
+*\[Placeholder: Analysis of Kobe’s shot selection evolution, highlighting his transition from rim-heavy scoring to mid-range artistry.\]*
 
-## Comparison: 2003 vs 2023
+Kobe knew that the only way to survive—whether in basketball or life—is to evolve. He didn’t fight change; he adapted to it.
 
-```{r warning=FALSE, message=FALSE}
-# Generate's Lebron's slope chart with the slope chart generating function created
-base_lebron_slope_chart <- shots_game_by_game_slope_chart(all_shots,"LeBron James",20031029,20231029)
+# When Setbacks Become Comebacks
 
-# Style it abit
-base_lebron_slope_chart +
-  scale_x_discrete(labels = c("20031029" = "October 29, 2003", "20231029" = "October 29, 2023")) + 
-  labs(
-    title = "LeBron's shot choices: Oct. 29, 2003 vs. 2023",
-    subtitle = "His 3PT attempts went up from 5% to 42% of all shot choices",
-    x = "",
-    y = "% of shots") +
-  theme_minimal() +
-  theme(
-    text = element_text(size = 14),
-    legend.position = "none",  # Remove the legend
-    plot.title = element_text(size = 14, face = "bold"),
-    plot.subtitle = element_text(size = 10)
-  )
-```
-:::
+In 2013, Kobe tore his Achilles tendon. For most players, it would have been the end. For Kobe, it was just another mountain to climb.
 
-...
+He returned to the court in record time—not as the same player, but as a version that could still compete. That’s the thing about mastery: it doesn’t make you invincible, but it does make you resilient.
 
-# 2003-2008: The power of playing to your strengths
+*\[Placeholder: Comparison of pre- and post-injury performance data, showing how Kobe adjusted his game to maintain his impact.\]*
 
-In LeBron’s early years, the game was simple: get to the basket.
+# Greatness Isn’t Measured in Trophies
 
-He was faster, stronger, and more athletic than most players on the court. Why take a risky three-pointer when you could bulldoze your way to the rim? Over 40% of his shots came from the paint, where he was nearly unstoppable.
+When you think of Kobe’s legacy, the numbers are staggering—five championships, two Finals MVPs, 81 points in a single game. But that’s not what made him unforgettable.
 
-The mid-range jumper - like the one he made in his first game - was his secondary weapon. And it worked because it fit the league’s style. Coaches weren’t chasing efficiency metrics yet. The paint and mid-range were where championships were won.
+It was the way he approached the craft: disciplined, obsessive, unrelenting. Kobe’s true greatness wasn’t what he achieved—it was how he achieved it.
 
-LeBron wasn’t just playing basketball. He was thriving in a system built for players like him. The lesson? Success often comes from maximizing what works in the moment, even if it won’t last forever.
+His career was a reminder that mastery isn’t about reaching the top; it’s about never being satisfied. It’s about waking up at 4:00 a.m., even when you’ve already won five championships, because you know there’s still more to learn.
 
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
+# The Data Speaks
 
-# Since this is time-series data - use a custom function to create a line chart - as i did before, but this time make it animated with gganimate
+Kobe Bryant’s journey is written not just in stories but in numbers:
 
-base_lebron_linechart_03_08 <- create_linechart(all_shots,"LeBron James",2003,2008)
+-   \[Placeholder: Shot chart data showing Kobe’s evolution from athletic scorer to technical sharpshooter.\]
 
-lebron_linechart_03_08_v2 <- base_lebron_linechart_03_08 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2003-08)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+-   \[Placeholder: Usage rate vs. efficiency data, showing how he balanced high volume with elite output.\]
 
-# Save the animation
-# anim_save("./assets/lebron_linechart_03_08_v2.gif", lebron_linechart_03_08_v2)
+-   \[Placeholder: Analysis of clutch performance, breaking down his impact in critical moments.\]
 
+The numbers prove what the stories tell us: greatness doesn’t happen by accident. It’s built, one shot, one step, one obsession at a time.
 
-```
+# The Pursuit Never Ends
 
-![LeBron's shot choices (2003-08) : Over 40% of LeBron’s shots came from the paint, with mid-range jumpers making up the second-largest proportion. Threes were an afterthought, comprising less than 15% of his attempts.](assets/lebron_linechart_03_08_v2.gif)
+The pursuit of mastery isn’t for everyone. It’s grueling, thankless, and often invisible. But for Kobe Bryant, it was everything.
 
-# 2009-2015: Learning to adapt
+His legacy isn’t just about basketball—it’s about what happens when you dedicate yourself to closing the gap between good and great.
 
-By 2009, the NBA was changing. The three-point revolution, sparked by analytics and players like Stephen Curry, was underway. LeBron noticed.
+That’s the Mamba Mentality. It’s not about perfection; it’s about pursuing it anyway.
 
-He didn’t immediately abandon the mid-range game - it was still part of his identity - but he started taking more three-pointers. Slowly, deliberately, he added them to his repertoire. By the time he joined the Miami Heat in 2010, and with the influence of teammates like Ray Allen who joined the Heat in 2012, his three-point attempts had grown to 25% of his total shots.
-
-This wasn’t just about skill development. It was about survival. The game was evolving, and players who clung to the old ways risked falling behind.
-
-LeBron’s willingness to adapt showed a crucial insight: the best performers don’t just play their game -they adjust to the rules as they change.
-
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
-base_lebron_linechart_09_15 <- create_linechart(all_shots,"LeBron James",2009,2015)
-
-lebron_linechart_09_15_v2 <- base_lebron_linechart_09_15 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2009-15)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-# Save the animation
-# anim_save("./assets/lebron_linechart_09_15_v2.gif", lebron_linechart_09_15_v2)
-
-```
-
-![Lebron's shot choices (2009-15) : Three-point attempts grew from 15% to 25% of his total shots. You can see the drastic change between 2012 and 2013 - the years he won 2 championships, back to back.](assets/lebron_linechart_09_15_v2.gif)
-
-# 2016-2024: Embracing the new reality
-
-The modern NBA belongs to the three-pointer, and so does LeBron.
-
-Between 2016 and 2023, over 35% of his shots came from beyond the arc. The mid-range? Almost gone. The paint? Still important, but less dominant than before.
-
-This wasn’t a concession—it was a strategy. LeBron didn’t stop attacking the basket. He just became more selective, choosing to drive when it mattered most and saving his energy for long-range daggers.
-
-The league had fully transitioned to an era of spacing and efficiency. Teams weren’t just tolerating three-pointers—they were building offenses around them. LeBron’s game evolved accordingly.
-
-The takeaway here is simple: the ability to change isn’t a weakness. It’s a competitive advantage
-
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
-
-base_lebron_linechart_16_24 <- create_linechart(all_shots,"LeBron James",2016,2024)
-
-lebron_linechart_16_24_v2 <- base_lebron_linechart_16_24 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2016-24)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-# Save the animation
-anim_save("./assets/lebron_linechart_16_24_v2.gif", lebron_linechart_16_24_v2)
-
-
-```
-
-![LeBron's shot choices (2016-2024) : The shift isn't just about LeBron. The NBA's average number of three-point attempts per game has more than doubled since his rookie year. The league has transitioned from a post-centric style to a perimeter-oriented game](assets/lebron_linechart_16_24_v2.gif)
-
-# LeBron as a mirror to the NBA
-
-LeBron’s career isn’t just about scoring points. It’s about reflecting the game’s evolution.
-
-The mid-range game, once the foundation of basketball, is now a relic. Analytics proved that long-range shots and finishes at the rim were more valuable, and the league responded. LeBron’s shift from mid-range jumpers to three-pointers wasn’t just personal growth - it was basketball growth.
-
-Consider this: In 2003, NBA teams averaged just 14 three-point attempts per game. By 2023, that number had more than doubled to 35. LeBron adapted not because he wanted to - but because he had to.
-
-The NBA’s greatest players aren’t just defined by their talent. They’re defined by how well they adjust when the rules of the game change.
-
-# What his journey can teach us
-
-LeBron’s evolution is a lesson in adaptability. He started his career mastering the tools of his era. Then, as the game changed, he didn’t resist - he evolved with it.
-
-For players entering the league today, the message is clear: success isn’t just about being great at one thing. It’s about being willing to reinvent yourself when the world around you changes.
-
-LeBron’s journey isn’t just about basketball. It’s about the universal truth that staying relevant requires constant evolution. The game always changes. The question is whether you’ll change with it.
-
-I believe that when its all said and done, LeBron’s legacy won't just about his stats or his championships. It’s about his adaptability.
-
-Over 20 years, he’s played in a league that’s transformed itself multiple times. Each time, LeBron transformed with it, redefining what it means to be great in basketball.
-
-The King’s reign is a testament to one simple idea: if you want to last, you have to evolve.
+And in that pursuit, Kobe didn’t just master basketball. He gave the rest of us a roadmap for mastering life.
 
 ------------------------------------------------------------------------
 
