--- a/11-shaq/index.qmd
+++ b/11-shaq/index.qmd
@@ -1,13 +1,13 @@
 ---
-title: <span style="color:white">The Evolution of LeBron's Shot Choices (2003–2024)</span>
-subtitle: "How the King’s shot selection mirrors the NBA’s transformation"
+title: <span style="color:white">The Sledgehammer Effect</span>
+subtitle: "How Shaquille O'Neal’s power redefined the game—and his cracks made him human"
 
 author: 
 - name: "King Matayo"
   email: kingmatayo.thefirst@gmail.com
-date: 12/07/2024
+date: 12/19/2024
 
-title-block-banner: ./assets/lebron-collage.jpg
+title-block-banner: ./assets/shaq.jpg
 title-block-banner-color: "black"
 
 format: html
@@ -42,203 +42,51 @@ library(viridis)
 # Source functions
 source(file="./R/00-functions.R")
 
-# Read csv file with all NBA shots data from 2003 to 2024
-all_shots <- read.csv("./data/allshots-2003-2024.csv")
-
 ```
 
-# A rookie’s first shot
+# Dominance Personified
 
-In my experience, the simplest decisions often reveal the most about who we are, at any given point in time.
+Some forces don’t just shape their surroundings—they obliterate them. A sledgehammer doesn’t ask permission; it doesn’t negotiate. It strikes, and everything in its path bends, breaks, or reshapes itself in response. Shaquille O’Neal was basketball’s ultimate sledgehammer.
 
-On October 29, 2003, 18-year-old LeBron James made his first shot decision as an NBA player. It wasn’t a flashy dunk or a deep three. It was a mid-range jumper - plain, efficient, unremarkable. Two points.
+His game wasn’t about finesse or subtlety. It was about raw, uncontainable power. When Shaq stepped onto the court, he wasn’t playing within the game’s limits—he was forcing the game to converge and adapt around him. Yet, like a sledgehammer, even his most powerful strikes revealed cracks, proving that no force, no matter how dominant, is without its vulnerabilities.
 
-::: column-margin
-[LeBron's 1st NBA Game: October 29, 2003](https://youtu.be/JLjH0rrNFeU?si=R5YavOwTrWUNfcZ2){target="_blank"}
-:::
+# The Hammer of the Paint
 
-But that single shot spoke volumes. It told us what basketball was in 2003: a game that valued size and strength, rewarded mid-range specialists, and treated the three-point line as an occasional luxury.
+The paint was Shaq’s demolition site. No one owned it like he did. Defenders didn’t guard him—they endured him. He would lower his shoulder, spin, and dunk with such authority that the rim itself seemed like it might give way.
 
-Fast forward 20 years, and that same decision would look out of place. Today’s NBA is unrecognizable. Three-pointers aren’t just common - they’re necessary. Mid-range shots are now basketball’s version of a landline phone: technically still around, but rarely used.
+Opposing coaches didn’t scheme to stop him—they schemed to survive him. Double-teams became a norm. Rules were adjusted to try and slow him down. But Shaq, like the sledgehammer, didn’t just break defenses; he shattered expectations of what a player of his size and power could do.
 
-::: column-margin
-[LeBron, 20 years later: October 29, 2023](https://youtu.be/7-q0NDE-_bw?si=mcOFaFomUdgVMu6w){target="_blank"}
-:::
+*Placeholder for data: An analysis of Shaq’s points in the paint, detailing his unparalleled efficiency and scoring volume near the basket.*
 
-LeBron’s first shot wasn’t just the start of his career. It was a snapshot of a moment in time. And what’s fascinating is how his evolution mirrors the evolution of the league itself. His choices on the court became a masterclass in adaptation.
+# The Cracks in the Hammer
 
-This is the story of how LeBron’s shot selection changed over two decades, and how those choices reflect the shifting forces that reshaped the game of basketball.
+Even the strongest tools have weak points, and Shaq’s was his free-throw shooting. "Hack-a-Shaq" wasn’t just a strategy—it was an acknowledgment that his dominance couldn’t be stopped any other way. The idea was simple: if you couldn’t outplay him, you could try to outwait him at the free-throw line.
 
-::: {.panel-tabset .nav-pills}
-## LeBron's first NBA game chart
+Shaq didn’t shy away from this crack in his game. He joked about it, worked on it, and kept moving forward. And while his struggles at the line frustrated fans and delighted opponents, they also made him relatable. Even the most unstoppable force had a vulnerable side.
 
-```{r warning=FALSE, message=FALSE}
-# Creating a basic shot chart for Lebron's 1st NBA shot
+*Placeholder for data: A statistical breakdown of Shaq’s free-throw percentage over his career, including its impact on game outcomes and team strategy.*
 
-create_shotchart(all_shots,"LeBron James",20031029)
-```
+# The Personality That Struck a Chord
 
-## 20 years later
+Shaq’s sledgehammer wasn’t just physical—it was emotional. His personality hit with the same force as his dunks. He was loud, playful, and unapologetically himself. Where other stars guarded their image, Shaq let his charisma run wild, endearing him to fans and teammates alike.
 
-```{r warning=FALSE, message=FALSE}
-create_shotchart(all_shots,"LeBron James",20231029)
-```
+He wasn’t just a dominant player; he was a cultural phenomenon. He made people laugh as much as he made them marvel. In a game where strength is often equated with stoicism, Shaq proved that dominance and joy could coexist.
 
-## Comparison: 2003 vs 2023
+*Placeholder for data: Metrics on fan engagement or teammate feedback during Shaq’s career, illustrating the broader influence of his personality.*
 
-```{r warning=FALSE, message=FALSE}
-# Generate's Lebron's slope chart with the slope chart generating function created
-base_lebron_slope_chart <- shots_game_by_game_slope_chart(all_shots,"LeBron James",20031029,20231029)
+# The Hardest Hits in the Biggest Moments
 
-# Style it abit
-base_lebron_slope_chart +
-  scale_x_discrete(labels = c("20031029" = "October 29, 2003", "20231029" = "October 29, 2023")) + 
-  labs(
-    title = "LeBron's shot choices: Oct. 29, 2003 vs. 2023",
-    subtitle = "His 3PT attempts went up from 5% to 42% of all shot choices",
-    x = "",
-    y = "% of shots") +
-  theme_minimal() +
-  theme(
-    text = element_text(size = 14),
-    legend.position = "none",  # Remove the legend
-    plot.title = element_text(size = 14, face = "bold"),
-    plot.subtitle = element_text(size = 10)
-  )
-```
-:::
+In the playoffs, where every possession felt like a clash of wills, Shaq swung harder than anyone else. His performances during the Lakers’ three-peat from 2000 to 2002 were a masterclass in force meeting opportunity. He didn’t just dominate games—he decided them.
 
-...
+When the pressure was at its highest, Shaq didn’t waver. He leaned into what he did best, bulldozing through opponents and solidifying his legacy as one of the greatest forces the game has ever seen.
 
-# 2003-2008: The power of playing to your strengths
+*Placeholder for data: A deep dive into Shaq’s playoff dominance, including peak performances during his championship runs.*
 
-In LeBron’s early years, the game was simple: get to the basket.
+# What Shaq Teaches Us
 
-He was faster, stronger, and more athletic than most players on the court. Why take a risky three-pointer when you could bulldoze your way to the rim? Over 40% of his shots came from the paint, where he was nearly unstoppable.
+Shaquille O’Neal’s career isn’t a lesson in perfection; it’s a lesson in leverage. He took what he was best at—power, charisma, authenticity—and amplified it to the point where everything else became secondary. His flaws didn’t diminish his greatness; they made his story richer.
 
-The mid-range jumper - like the one he made in his first game - was his secondary weapon. And it worked because it fit the league’s style. Coaches weren’t chasing efficiency metrics yet. The paint and mid-range were where championships were won.
-
-LeBron wasn’t just playing basketball. He was thriving in a system built for players like him. The lesson? Success often comes from maximizing what works in the moment, even if it won’t last forever.
-
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
-
-# Since this is time-series data - use a custom function to create a line chart - as i did before, but this time make it animated with gganimate
-
-base_lebron_linechart_03_08 <- create_linechart(all_shots,"LeBron James",2003,2008)
-
-lebron_linechart_03_08_v2 <- base_lebron_linechart_03_08 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2003-08)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-# Save the animation
-# anim_save("./assets/lebron_linechart_03_08_v2.gif", lebron_linechart_03_08_v2)
-
-
-```
-
-![LeBron's shot choices (2003-08) : Over 40% of LeBron’s shots came from the paint, with mid-range jumpers making up the second-largest proportion. Threes were an afterthought, comprising less than 15% of his attempts.](assets/lebron_linechart_03_08_v2.gif)
-
-# 2009-2015: Learning to adapt
-
-By 2009, the NBA was changing. The three-point revolution, sparked by analytics and players like Stephen Curry, was underway. LeBron noticed.
-
-He didn’t immediately abandon the mid-range game - it was still part of his identity - but he started taking more three-pointers. Slowly, deliberately, he added them to his repertoire. By the time he joined the Miami Heat in 2010, and with the influence of teammates like Ray Allen who joined the Heat in 2012, his three-point attempts had grown to 25% of his total shots.
-
-This wasn’t just about skill development. It was about survival. The game was evolving, and players who clung to the old ways risked falling behind.
-
-LeBron’s willingness to adapt showed a crucial insight: the best performers don’t just play their game -they adjust to the rules as they change.
-
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
-base_lebron_linechart_09_15 <- create_linechart(all_shots,"LeBron James",2009,2015)
-
-lebron_linechart_09_15_v2 <- base_lebron_linechart_09_15 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2009-15)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-# Save the animation
-# anim_save("./assets/lebron_linechart_09_15_v2.gif", lebron_linechart_09_15_v2)
-
-```
-
-![Lebron's shot choices (2009-15) : Three-point attempts grew from 15% to 25% of his total shots. You can see the drastic change between 2012 and 2013 - the years he won 2 championships, back to back.](assets/lebron_linechart_09_15_v2.gif)
-
-# 2016-2024: Embracing the new reality
-
-The modern NBA belongs to the three-pointer, and so does LeBron.
-
-Between 2016 and 2023, over 35% of his shots came from beyond the arc. The mid-range? Almost gone. The paint? Still important, but less dominant than before.
-
-This wasn’t a concession—it was a strategy. LeBron didn’t stop attacking the basket. He just became more selective, choosing to drive when it mattered most and saving his energy for long-range daggers.
-
-The league had fully transitioned to an era of spacing and efficiency. Teams weren’t just tolerating three-pointers—they were building offenses around them. LeBron’s game evolved accordingly.
-
-The takeaway here is simple: the ability to change isn’t a weakness. It’s a competitive advantage
-
-```{r warning=FALSE, message=FALSE, include=FALSE,output=FALSE}
-
-base_lebron_linechart_16_24 <- create_linechart(all_shots,"LeBron James",2016,2024)
-
-lebron_linechart_16_24_v2 <- base_lebron_linechart_16_24 +
-  # Animation: reveal a path per season
-  transition_reveal(yearSeason) +
-  labs(
-    title = "LeBron James % of Shot Choices by Court Zone and by Season (2016-24)",
-    x = "Season",
-    y = "% of Shots",
-    color = "Court Zone"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-# Save the animation
-anim_save("./assets/lebron_linechart_16_24_v2.gif", lebron_linechart_16_24_v2)
-
-
-```
-
-![LeBron's shot choices (2016-2024) : The shift isn't just about LeBron. The NBA's average number of three-point attempts per game has more than doubled since his rookie year. The league has transitioned from a post-centric style to a perimeter-oriented game](assets/lebron_linechart_16_24_v2.gif)
-
-# LeBron as a mirror to the NBA
-
-LeBron’s career isn’t just about scoring points. It’s about reflecting the game’s evolution.
-
-The mid-range game, once the foundation of basketball, is now a relic. Analytics proved that long-range shots and finishes at the rim were more valuable, and the league responded. LeBron’s shift from mid-range jumpers to three-pointers wasn’t just personal growth - it was basketball growth.
-
-Consider this: In 2003, NBA teams averaged just 14 three-point attempts per game. By 2023, that number had more than doubled to 35. LeBron adapted not because he wanted to - but because he had to.
-
-The NBA’s greatest players aren’t just defined by their talent. They’re defined by how well they adjust when the rules of the game change.
-
-# What his journey can teach us
-
-LeBron’s evolution is a lesson in adaptability. He started his career mastering the tools of his era. Then, as the game changed, he didn’t resist - he evolved with it.
-
-For players entering the league today, the message is clear: success isn’t just about being great at one thing. It’s about being willing to reinvent yourself when the world around you changes.
-
-LeBron’s journey isn’t just about basketball. It’s about the universal truth that staying relevant requires constant evolution. The game always changes. The question is whether you’ll change with it.
-
-I believe that when its all said and done, LeBron’s legacy won't just about his stats or his championships. It’s about his adaptability.
-
-Over 20 years, he’s played in a league that’s transformed itself multiple times. Each time, LeBron transformed with it, redefining what it means to be great in basketball.
-
-The King’s reign is a testament to one simple idea: if you want to last, you have to evolve.
-
-------------------------------------------------------------------------
+Shaq reminds us that mastery doesn’t come from doing everything well. It comes from doing a few things so exceptionally that they overshadow everything else. Like a sledgehammer, his impact wasn’t just seen—it was felt. And it left the game forever changed
 
 # Sources:
 
