Added intro index.html

--- a/15-intro/index.qmd
+++ b/15-intro/index.qmd
@@ -1,13 +1,13 @@
 ---
-title: <span style="color:white">The Dream’s Blueprint</span>
-subtitle: "How mastery of the basics turned Hakeem Olajuwon into a basketball legend"
+title: <span style="color:white">Introduction</span>
+subtitle: "A little bit about myself and why I wrote this book"
 
 author: 
 - name: "King Matayo"
   email: kingmatayo.thefirst@gmail.com
-date: 12/19/2024
+date: 12/20/2024
 
-title-block-banner: ./assets/hakeem.jpg
+title-block-banner: true
 title-block-banner-color: "black"
 
 format: html
@@ -46,76 +46,62 @@ source(file="./R/00-functions.R")
 
 ```
 
-# The Accidental Basketball Player
+In 1997, when I was ten years old, my cousin handed me a basketball. That simple act introduced me to a world of competition, creativity, and resilience that has shaped how I think about life. For years, I spent countless hours on the court and in front of the screen, mesmerized by players who made the extraordinary look effortless.
 
-When Hakeem Olajuwon first stepped onto a basketball court, he was, by his own admission, clumsy. Born and raised in Lagos, Nigeria, Hakeem didn’t grow up idolizing Kareem Abdul-Jabbar or Wilt Chamberlain. Soccer was his first love, and footwork was its language. Pivoting to basketball as a teenager—almost by accident—he brought with him a foundation that would later transform him into one of the most graceful players the NBA has ever seen.
+Some memories of the game are seared into my mind. The 2006 and 2016 NBA Finals weren’t just sporting events—they were epics of resilience and grit. They taught me that in basketball, as in life, no challenge is insurmountable, and no deficit is final.
 
-The thing about Hakeem is that he didn’t just learn the game. He mastered it. And not in the way most people imagine mastery looks like. His greatness wasn’t built on highlight dunks or flashy, viral moments. It was built on something quieter: the basics. Pivoting, positioning, and patience. Things that don’t scream for attention but demand respect when done well.
+As adulthood demanded more of my time, my relationship with basketball changed. In 2012, I began my career as a management consultant, and while the game I loved took a backseat, my passion for it never faded. I kept following the NBA as it evolved, witnessing players like Stephen Curry redefine what it means to be great.
 
-# The Dream Shake and the Illusion of Effortlessness
+But as the years went by, I started seeing basketball differently. My work taught me to uncover patterns, analyze decisions, and tell stories using data. I began applying those skills to the sport, exploring the wealth of data that now surrounds the NBA. What I found were fascinating insights into the decisions, trade-offs, and judgment calls that separate the good from the great.
 
-If you’ve ever watched a defender fall for Hakeem’s Dream Shake, you might think it was magic. A subtle fake one way, a quick pivot the other, and the defender was spinning like a top while Hakeem finished with a soft touch around the rim. It was beautiful to watch—and devastating to defend.
+This book, *Bounce Back*, grew out of that exploration.
 
-But what looked like magic wasn’t magic at all. It was work. Thousands of hours of work.
+At its core, *Bounce Back* is a study of decision-making, resilience, and mastery through the lens of basketball’s greatest players—what I call the “12 disciples” of greatness. Each player has a story to tell, a lesson to share, and a legacy to inspire.
 
-Placeholder for Analysis:
+The book is structured into three themes, each capturing a crucial aspect of greatness:
 
--   Post Play Efficiency: A breakdown of the success rate of the Dream Shake, highlighting how it performed under different conditions (regular season vs. playoffs, against elite defenders, etc.).
+1.  **The Art of Decision-Making**
 
--   Comparative Metrics: How Olajuwon’s post-scoring efficiency stacks up against other all-time great big men, providing a data-driven lens on his dominance.
+Greatness begins with decisions. Whether it’s choosing when to take the shot, how to adapt to changing circumstances, or outthinking the opposition, these moments define a career.
 
-Hakeem used to practice his footwork in solitude, moving through drills with the same intensity he brought to games. He treated every move like a puzzle piece, carefully crafted and meticulously placed. By the time defenders saw it, it was too late. They weren’t just guarding Hakeem; they were guarding the sum of years of focused effort.
+-   *LeBron James: Shot Choices explores how a superstar navigates the trade-offs between risk and reward.*
 
-We like to think genius is spontaneous, but more often, it’s the product of patience. Hakeem’s Dream Shake was a perfect example of this—an elegant reminder that mastery is often just the repetition of small things done extraordinarily well.
+-   *Michael Jordan: Seizing the Moment delves into his uncanny ability to rise when it mattered most.*
 
-# Defense: The Silent Dominance
+-   *Kevin Durant: Thriving Through Change highlights the courage to reinvent oneself.*
 
-In the NBA, defense doesn’t sell tickets. People come for the dunks, the threes, the highlight-reel plays. But Hakeem understood something many didn’t: defense wins championships.
+-   *Larry Bird: Outsmarting the Opposition showcases how intelligence can rival athleticism*.
 
-He wasn’t the tallest center, but he was always the smartest. He blocked shots with precision, swatted away 3,830 attempts in his career, a feat no one has surpassed. He read passes like a chess master anticipating moves, accumulating steals at a rate unheard of for a big man.
+2.  **Leadership and Team Dynamics**
 
-Placeholder for Analysis:
+Basketball is a team sport, and no player achieves greatness alone. The best understand how to lead, inspire, and elevate those around them.
 
--   Defensive Metrics: Hakeem’s block rate, steal rate, and defensive win shares, contextualized with the era he played in and compared to other defensive legends.
+-   *Magic Johnson: The Selfless Playmaker reveals the power of putting the team first.*
 
--   Impact Analysis: How his presence in the paint altered opponents’ shot selections and efficiency, highlighting his broader influence on team defense.
+-   *Tim Duncan: Leading with Consistency examines the quiet leadership that built a dynasty.*
 
-Hakeem didn’t just play defense; he controlled the game without needing the ball. Opponents dreaded entering his domain because it wasn’t just about skill—it was about preparation. He studied his rivals like a lawyer studying a case file, learning their tendencies, their tricks, and their weaknesses. Every block and steal wasn’t just athleticism; it was evidence of a mental edge.
+-   *Bill Russell: The Pillar of a Dynasty reflects on the essence of teamwork and sacrifice.*
 
-# Mastery Requires Focus
+-   *Stephen Curry: Leading Through Innovation explores how creativity reshaped an entire era*.
 
-What separates someone who’s good from someone who’s great? It’s tempting to think it’s talent, but that’s only part of the story. The real gap between good and great is focus. And Hakeem’s focus was otherworldly.
+3.  **Mastery and the Pursuit of Greatness**
 
-During Ramadan, when Hakeem fasted from sunrise to sunset, he played some of his best basketball. He would practice and play without food or water, yet he remained dominant. How? Because Hakeem’s game was never just physical. His discipline—both mental and spiritual—created a foundation that even exhaustion couldn’t break.
+Beyond leadership and decision-making lies mastery—the relentless drive to perfect one’s craft and dominate the game.
 
-Placeholder for Analysis:
+-   *Kareem Abdul-Jabbar: The Timeless Innovator shows how reinvention fuels longevity.*
 
--   Playoff Performances: Statistical review of his Finals MVP seasons and key playoff games, showcasing how his focus and preparation translated into dominance on the biggest stage.
+-   *Kobe Bryant: The Relentless Pursuit is a story of obsession and dedication.*
 
--   Clutch Metrics: Hakeem’s performance under high-pressure situations, including points, rebounds, blocks, and shooting efficiency in late-game scenarios.
+-   *Shaquille O’Neal: Dominance Through Strength illustrates how to capitalize on one’s unique gifts.*
 
-Most players approach the game like a sprint, chasing quick wins and flashy moments. Hakeem approached it like a marathon. Preparation was his secret weapon. While others relied on adrenaline, he relied on calm repetition. And when it mattered most—when championships were on the line—that focus became his superpower.
+-   *Hakeem Olajuwon: Mastery of the Fundamentals reminds us of the beauty in perfecting the basics*.
 
-# The Lesson: Mastery is in the Margins
+Through these stories, we’ll explore how the principles that make players great on the court also apply off the court—to business, relationships, and life itself. The lessons go beyond the stat sheets and highlight the decisions, sacrifices, and mindsets that separate the exceptional from the merely good.
 
-Hakeem’s story isn’t about basketball. It’s about what happens when you commit to doing something exceptionally well.
+In basketball, the score resets every game. Life doesn’t offer that luxury, but the principles of resilience, judgment, and mastery remain universal.
 
-He didn’t set out to be flashy. He set out to be effective. His greatest moves—the Dream Shake, the blocks, the steals—were born from mastering the fundamentals. And the irony of mastering the basics is that it doesn’t make you basic. It makes you extraordinary.
+This book is not just for basketball fans. It’s for anyone who’s faced challenges, made tough decisions, or sought to bounce back stronger.
 
-In life, as in basketball, the little things are the big things. Patience. Repetition. Focus. These are the tools of greatness, and they’re available to anyone willing to put in the time.
-
-# The Legacy of The Dream
-
-Hakeem Olajuwon’s career is proof that the pursuit of mastery pays dividends far beyond what the world sees. He showed us that greatness isn’t loud; it’s consistent. It’s the person who works when no one is watching, who refines the unremarkable until it becomes unforgettable.
-
-And maybe the most important thing Hakeem taught us is this: mastery isn’t about being the best. It’s about becoming the best version of yourself. The Dream didn’t just dominate basketball—he showed us all how to dream bigger.
-
-Placeholder for Final Analysis:
-
--   Career Metrics Summary: Synthesis of Olajuwon’s achievements—blocks, steals, scoring efficiency, and championships—to quantify his all-time impact.
+Welcome to *Bounce Back*. Let’s begin.
 
 ------------------------------------------------------------------------
-
-# Sources:
-
-To Be Included...
