--- a/1-lebron/index.qmd
+++ b/1-lebron/index.qmd
@@ -1,13 +1,13 @@
 ---
-title: <span style="color:white">The Evolution of LeBron's Shot Choices (2003–2024)</span>
-subtitle: "How the King’s shot selection mirrors the NBA’s transformation"
+title: <span style="color:white">The King of Adaptability</span>
+subtitle: "How the evolution of LeBron's shot choices mirrors the NBA's transformation (2003-2024)"
 
 author: 
 - name: "King Matayo"
   email: kingmatayo.thefirst@gmail.com
 date: 12/07/2024
 
-title-block-banner: ./assets/lebron-collage.jpg
+title-block-banner: true
 title-block-banner-color: "black"
 
 format: html
@@ -221,6 +221,60 @@ LeBron’s career isn’t just about scoring points. It’s about reflecting the
 The mid-range game, once the foundation of basketball, is now a relic. Analytics proved that long-range shots and finishes at the rim were more valuable, and the league responded. LeBron’s shift from mid-range jumpers to three-pointers wasn’t just personal growth - it was basketball growth.
 
 Consider this: In 2003, NBA teams averaged just 14 three-point attempts per game. By 2023, that number had more than doubled to 35. LeBron adapted not because he wanted to - but because he had to.
+
+```{r}
+
+
+
+# Filtering out lebron_shots and league_shots data
+
+league_shots <- all_shots |>
+    # Scale x and y coordinates (court dimensions adjusted manually)
+    mutate(x = (locationX / 10) - 0,
+           y = (locationY / 10) - 41.75) |>
+    # Remove shots from beyond half-court range
+    filter(y < 0) |> 
+    mutate(
+      # Categorize shots based on distance from the basket
+      court_zone = case_when(
+        distanceShot <= 8 ~ "Paint",               # Shots close to the basket
+        distanceShot > 8 & distanceShot < 23 ~ "Mid-Range",  # Shots outside the paint but inside the 3PT line
+        distanceShot >= 23 ~ "3PT",                # Shots beyond the 3-point line
+        TRUE ~ "Other"                            # Catch-all for undefined cases
+      )
+    )
+
+lebron_shots <- league_shots %>% 
+  filter(namePlayer == "LeBron James")
+
+# Now for the linechart - you have REWORK the mutate() code below - use the linechart code in the 00-functions.R file, as a guide
+
+# Step 1: Calculate LeBron's three-point attempt percentage by season
+lebron_3pt <- lebron_shots |>
+  filter(court_zone == "3PT") |>
+  group_by(yearSeason) |>
+  summarize(lebron_3pt_attempts = n(), .groups = "drop") |>
+  mutate(
+    total_attempts = lebron_shots |> group_by(yearSeason) |> summarize(total = n(), .groups = "drop"),
+    lebron_3pt_percentage = (lebron_3pt_attempts / total_attempts) * 100
+  ) 
+
+# Step 2: Calculate league-wide three-point attempt percentage by season
+league_3pt <- league_shots |>
+  filter(court_zone == "3PT") |>
+  group_by(yearSeason) |>
+  summarize(league_3pt_attempts = n(), .groups = "drop") |>
+  mutate(
+    total_attempts = league_shots |> group_by(yearSeason) |> summarize(total = n(), .groups = "drop"),
+    league_3pt_percentage = (league_3pt_attempts / total_attempts) * 100
+  )
+
+# Step 3: Merge LeBron's and league-wide data
+trend_data <- left_join(lebron_3pt, league_3pt, by = "yearSeason")
+
+# Step 4: Create the line chart - to be done later
+
+```
 
 The NBA’s greatest players aren’t just defined by their talent. They’re defined by how well they adjust when the rules of the game change.
 
